--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.xavier</groupId>
     <artifactId>ktl</artifactId>
-    <version>0.0.1-RC1</version>
+    <version>0.0.1-RC2_SingleTable</version>
     <name>ktl</name>
     <description>Data sync from mysql to es</description>
 
